feat: node runtime version check (#2948)
Checks the current version of `node` against a list of SemVer rangers
that are configured in `@jsii/node-check`, and emit a BIG FAT warning
to STDERR (with color if possible) in case the version is found to be
end-of-life, deprecated, or untested, so that users know that they are
subjecting themselves to random problems.

When marking a range as deprecated, a deadline is also provided in the
message, informing users about when the releases will move to the
end-of-life support level.

---

The check is performed at the entry point of all CLI utilities, including the
`@jsii/runtime` entry point.

---

By submitting this pull request, I confirm that my contribution is made under the terms of the [Apache 2.0 license].

[Apache 2.0 license]: https://www.apache.org/licenses/LICENSE-2.0

--- a/packages/@jsii/runtime/package.json
+++ b/packages/@jsii/runtime/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@jsii/kernel": "^0.0.0",
+    "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0"
   },
   "devDependencies": {
