--- a/packages/jsii-config/tsconfig.json
+++ b/packages/jsii-config/tsconfig.json
@@ -5,6 +5,7 @@
   ],
   "exclude": ["jest.config.ts"],
   "references": [
+    { "path": "../@jsii/check-node" },
     { "path": "../@jsii/spec" },
   ],
 }
