--- a/packages/@jsii/check-node/package.json
+++ b/packages/@jsii/check-node/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsii-reflect",
+  "name": "@jsii/check-node",
   "version": "0.0.0",
-  "description": "strongly-typed reflection library and tools for jsii",
+  "description": "Checks for supported node versions",
   "license": "Apache-2.0",
   "author": {
     "name": "Amazon Web Services",
@@ -14,18 +14,20 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/aws/jsii.git",
-    "directory": "packages/jsii-reflect"
+    "directory": "packages/@jsii/check-node"
   },
   "engines": {
     "node": ">= 10.3.0"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "bin": {
-    "jsii-tree": "bin/jsii-tree"
+  "exports": {
+    ".": "./lib/index.js",
+    "./package.json": "./package.json",
+    "./run": "./lib/run.js"
   },
   "scripts": {
-    "build": "tsc --build && chmod +x bin/jsii-tree && npm run lint",
+    "build": "tsc --build && npm run lint",
     "watch": "tsc --build -w",
     "lint": "eslint . --ext .js,.ts --ignore-path=.gitignore",
     "lint:fix": "yarn lint --fix",
@@ -34,25 +36,13 @@
     "package": "package-js"
   },
   "dependencies": {
-    "@jsii/check-node": "0.0.0",
-    "@jsii/spec": "^0.0.0",
-    "colors": "^1.4.0",
-    "fs-extra": "^9.1.0",
-    "oo-ascii-tree": "^0.0.0",
-    "yargs": "^16.2.0"
+    "chalk": "^4.1.2",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@scope/jsii-calc-lib": "^0.0.0",
-    "@types/fs-extra": "^8.1.1",
+    "@types/chalk": "^2.2.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^10.17.59",
-    "@types/yargs": "^16.0.1",
-    "eslint": "^7.26.0",
-    "jest": "^26.6.3",
-    "jsii": "^0.0.0",
-    "jsii-build-tools": "^0.0.0",
-    "jsii-calc": "^3.20.120",
-    "prettier": "^2.3.0",
-    "typescript": "~3.9.9"
+    "jest": "^26.6.3"
   }
 }
