--- a/packages/jsii-diff/tsconfig.json
+++ b/packages/jsii-diff/tsconfig.json
@@ -5,6 +5,8 @@
   ],
   "exclude": ["jest.config.ts"],
   "references": [
+    { "path": "../@jsii/check-node" },
+    { "path": "../@jsii/spec" },
     { "path": "../jsii-reflect" },
   ],
 }
