--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.3.0"
   },
   "dependencies": {
+    "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0",
     "commonmark": "^0.29.3",
     "fs-extra": "^9.1.0",
