--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -70,8 +70,6 @@ jobs:
         id: buildx
         if: steps.should-run.outputs.result == 'true'
         uses: docker/setup-buildx-action@v1
-        with:
-          buildkitd-flags: --oci-worker-max-parallelism=1
 
       - name: Determine build time
         id: build-time
@@ -85,6 +83,35 @@ jobs:
           docker buildx build                                                   \
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/amd64,linux/arm64                                  \
+            --target superchain                                                 \
+            --pull                                                              \
+            --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
+            --build-arg COMMIT_ID='${{ github.sha }}'                           \
+            --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
+            -f superchain/Dockerfile                                            \
+            .
+
+      # Testing sequentially, because in parallel it's too slow due to IO contention
+      - name: Test Image (AMD64)
+        if: steps.should-run.outputs.result == 'true'
+        run: |-
+          docker buildx build                                                   \
+            --builder ${{ steps.buildx.outputs.name }}                          \
+            --platform linux/amd64                                              \
+            --target superchain                                                 \
+            --pull                                                              \
+            --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
+            --build-arg COMMIT_ID='${{ github.sha }}'                           \
+            --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
+            -f superchain/Dockerfile                                            \
+            .
+      - name: Test Image (ARM64)
+        if: steps.should-run.outputs.result == 'true'
+        run: |-
+          docker buildx build                                                   \
+            --builder ${{ steps.buildx.outputs.name }}                          \
+            --platform linux/arm64                                              \
+            --target superchain                                                 \
             --pull                                                              \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
