--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -71,6 +71,17 @@ jobs:
         if: steps.should-run.outputs.result == 'true'
         uses: docker/setup-buildx-action@v1
 
+      # We only restore GH cache if we are not going to publish the result (i.e: PR validation)
+      - name: Set up layer cache
+        if: steps.should-run.outputs.result == 'true' && github.event_name != 'push'
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('superchain/*') }}-${{ github.sha }}
+          restore-keys: |-
+            ${{ runner.os }}-buildx-${{ hashFiles('superchain/*') }}-
+            ${{ runner.os }}-buildx-
+
       - name: Determine build time
         id: build-time
         if: steps.should-run.outputs.result == 'true'
@@ -84,12 +95,21 @@ jobs:
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/amd64,linux/arm64                                  \
             --target superchain                                                 \
+            --cache-from type=local,src=/tmp/.buildx-cache                      \
+            --cache-to type=local,dest=/tmp/.buildx-cache-out                   \
             --pull                                                              \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
             -f superchain/Dockerfile                                            \
             .
+
+      # Replace the cache so it does not grow forever
+      - name: Update layer cache
+        if: always() && steps.should-run.outputs.result == 'true'
+        run: |-
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-out /tmp/.buildx-cache
 
       # Testing sequentially, because in parallel it's too slow due to IO contention
       - name: Test Image (AMD64)
@@ -99,7 +119,8 @@ jobs:
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/amd64                                              \
             --target superchain                                                 \
-            --pull                                                              \
+            --cache-from type=local,src=/tmp/.buildx-cache                      \
+            --cache-to type=local,dest=/tmp/.buildx-cache                       \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
@@ -112,7 +133,8 @@ jobs:
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/arm64                                              \
             --target superchain                                                 \
-            --pull                                                              \
+            --cache-from type=local,src=/tmp/.buildx-cache                      \
+            --cache-to type=local,dest=/tmp/.buildx-cache                       \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
@@ -127,8 +149,9 @@ jobs:
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/amd64,linux/arm64                                  \
             --target superchain                                                 \
+            --cache-from type=local,src=/tmp/.buildx-cache                      \
+            --cache-to type=local,dest=/tmp/.buildx-cache                       \
             --push                                                              \
-            --pull                                                              \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
@@ -142,8 +165,9 @@ jobs:
               --builder ${{ steps.buildx.outputs.name }}                          \
               --platform linux/amd64,linux/arm64                                  \
               --target superchain                                                 \
+              --cache-from type=local,src=/tmp/.buildx-cache                      \
+              --cache-to type=local,dest=/tmp/.buildx-cache                       \
               --push                                                              \
-              --pull                                                              \
               --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
               --build-arg COMMIT_ID='${{ github.sha }}'                           \
               --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
@@ -159,8 +183,9 @@ jobs:
             --builder ${{ steps.buildx.outputs.name }}                          \
             --platform linux/amd64,linux/arm64                                  \
             --target superchain                                                 \
+            --cache-from type=local,src=/tmp/.buildx-cache                      \
+            --cache-to type=local,dest=/tmp/.buildx-cache                       \
             --push                                                              \
-            --pull                                                              \
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
@@ -174,8 +199,9 @@ jobs:
               --builder ${{ steps.buildx.outputs.name }}                          \
               --platform linux/amd64,linux/arm64                                  \
               --target superchain                                                 \
+              --cache-from type=local,src=/tmp/.buildx-cache                      \
+              --cache-to type=local,dest=/tmp/.buildx-cache                       \
               --push                                                              \
-              --pull                                                              \
               --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
               --build-arg COMMIT_ID='${{ github.sha }}'                           \
               --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
