--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -35,7 +35,7 @@
     "commonmark": "^0.30.0",
     "fs-extra": "^9.1.0",
     "typescript": "~3.9.10",
-    "xmldom": "github:xmldom/xmldom#0.7.0",
+    "@xmldom/xmldom": "^0.7.0",
     "yargs": "^16.2.0"
   },
   "license": "Apache-2.0",
